<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrenchQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="start_quiz">Start Quiz!</string>
    <string name="start_quiz_test">Start Quiz (Test)!</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="search_term">Search Term</string>
    <string name="add_new_term">Add New Term</string>
    <string name="french_term">French Term</string>
    <string name="italian_term">Italian Term</string>
    <string name="list_terms">List Terms</string>
    <string name="empty_hint"> </string>
    <string name="populate_glossary">Populate Glossary</string>
    <string name="wipe_glossary">Wipe Glossary</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="next_question">Next Question</string>

</resources>
