<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >


    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz"
        />
    <Button
        android:id="@+id/btnStartQuizTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_quiz_test"
        />    
    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        />
    
    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        />
    
    <Button
        android:id="@+id/btnListTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_terms"
        />
        
    <Button
        android:id="@+id/btnSearchTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_term"
        />

    <Button
        android:id="@+id/btnAddNewTerm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_term"
        />

    
</LinearLayout>
