<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:gravity="center"
        />
    
    <Button 
        android:id="@+id/btnAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/answer"
        />
    <Button 
        android:id="@+id/btnAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/answer"
        />
    <Button 
        android:id="@+id/btnAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/answer"
        />

    <Button 
        android:id="@+id/btnNextQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:text="@string/next_question"
        />    
</LinearLayout>
